@@ -1,4 +1,8 @@
 
+Development branch (next version)
+- Added GetBestResult() to the tuner's API to retrieve the best parameters programmatically
+- Changed std::initalizer_list in the AddParameters API to std::vector
+
 Version 2.6.0
 - Changed timing measurements to now also include the (varying) kernel launch overhead
 - It is now possible to set OpenCL compiler options through the env variable CLTUNE_BUILD_OPTIONS
